--- a/style.css
+++ b/style.css
@@ -105,14 +105,23 @@ body {
 } */
 
 /* Social Media Links */
-.social-links {
+/* .social-links {
   position: fixed;
-  top: 60px; /* lowered from 20px */
+  top: 60px; 
   right: 20px;
   display: flex;
   flex-direction: column;
   gap: 10px;
   z-index: 99;
+} */
+.social-links {
+  position: fixed;
+  bottom: 50px; 
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  gap: 15px;
+  z-index: 8;
 }
 @keyframes glow {
   0% {
@@ -159,7 +168,7 @@ body {
 
 .register-btn-container {
   position: fixed;
-  bottom: 90px; /* Lower than before (was 130px) */
+  bottom: 160px; /* Lower than before (was 130px) */
   width: 100%;
   display: flex;
   justify-content: center;
